--- a/home.html
+++ b/home.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <title>ホーム | 統合アプリ</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/face-api.js/dist/face-api.min.js"></script>
+  <script defer src="script.js"></script>
 </head>
 <body>
   <header class="appbar">
