--- a/attendance.html
+++ b/attendance.html
@@ -4,12 +4,7 @@
   <meta charset="UTF-8">
   <title>出席認証 | 統合アプリ</title>
   <link rel="stylesheet" href="style.css">
-  </main>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-  <script defer src="https://cdn.jsdelivr.net/npm/face-api.js/dist/face-api.min.js"></script>
-  <script defer src="script.js"></script>
-</head>
+  </head>
 <body id="page-auth">
   <header class="appbar">
     <div class="logo">統合アプリ</div>
@@ -38,12 +33,21 @@
 
     <button id="beaconScanBtn" style="margin-top: 10px;">ビーコンをスキャン</button>
     <p id="beaconStatus"></p>
-    <button disabled style="margin-top: 10px;">ICカードをスキャン</button>
+    
+    <button id="icScanBtn" style="margin-top: 10px;">ICカードをスキャン</button>
+    <p id="icStatus"></p>
 
     <br><br>
     <a href="check.html">→ 5. 出席状況を確認する</a>
     <br>
     <a href="form.html">→ 6. 欠席/遅刻の連絡をする</a>
   </main>
+
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+  
+  <script defer src="https://cdn.jsdelivr.net/npm/face-api.js/dist/face-api.min.js"></script>
+  
+  <script defer src="script.js"></script>
 </body>
 </html>
