webアプリの機能破棄

--- a/home.html
+++ b/home.html
@@ -10,7 +10,9 @@
     <div class="logo">統合アプリ</div>
     <nav>
       <a href="curriculum.html">カリキュラム</a>
-      <a href="attendance.html">出席認証</a>
+      
+      <a style="color: #999; cursor: not-allowed;">出席認証 (アプリへ移行)</a>
+      
       <a href="settings.html">設定</a>
     </nav>
   </header>
@@ -22,8 +24,8 @@
     <h2>全ページ一覧</h2>
     <ul>
       <li><a href="curriculum.html">カリキュラム表示ページ</a></li>
-      <li><a href="attendance.html">出席認証ページ</a> (顔認証, GPS, ...)</li>
-      <li><a href="settings.html">設定ページ</a> (顔登録, ユーザー設定)</li>
+      <li><a href="attendance.html">出席認証ページ</a> (機能はネイティブアプリへ移行)</li>
+      <li><a href="settings.html">設定ページ</a> (顔登録は管理者アプリへ移行)</li>
       <li><a href="check.html">出席確認ページ</a></li>
       <li><a href="form.html">欠席・早退・遅刻連絡フォーム</a></li>
       <li><a href="calendar.html">カレンダー掲載ページ</a></li>
@@ -31,11 +33,5 @@
     </ul>
   </main>
 
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-  
-  <script defer src="https://cdn.jsdelivr.net/npm/face-api.js/dist/face-api.min.js"></script>
-  
-  <script defer src="script.js"></script>
-</body>
+  </body>
 </html>
