--- a/attendance.html
+++ b/attendance.html
@@ -1,53 +1,19 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <title>出席認証 | 統合アプリ</title>
-  <link rel="stylesheet" href="style.css">
-  </head>
 <body id="page-auth">
   <header class="appbar">
     <div class="logo">統合アプリ</div>
     <nav>
       <a href="home.html">ホーム</a>
       <a href="curriculum.html">カリキュラム</a>
-      <a href="attendance.html" class="active">出席認証</a>
-      <a href="settings.html">設定</a>
+      <a style="color: #999; cursor: not-allowed;" class="active">出席認証 (アプリへ移行)</a>
+      <a style="color: #999; cursor: not-allowed;">設定 (管理者アプリへ移行)</a>
     </nav>
   </header>
 
   <main class="content">
-    <h1>出席認証 (認証フェーズ)</h1>
-
-    <div class="face-container">
-      <video id="video" autoplay muted playsinline></video>
-      <canvas id="canvas"></canvas>
-    </div>
-    <p id="status">カメラを起動中...</p>
-
-    <hr>
-
-    <h3>その他の認証</h3>
-    <button id="gpsAuthBtn">GPSで認証する</button>
-    <p id="gpsStatus"></p>
-
-    <button id="beaconScanBtn" style="margin-top: 10px;">ビーコンをスキャン</button>
-    <p id="beaconStatus"></p>
-    
-    <button id="icScanBtn" style="margin-top: 10px;">ICカードをスキャン</button>
-    <p id="icStatus"></p>
-
-    <br><br>
-    <a href="check.html">→ 5. 出席状況を確認する</a>
-    <br>
-    <a href="form.html">→ 6. 欠席/遅刻の連絡をする</a>
+    <h1>出席認証</h1>
+    <p style="font-size: 1.2em; color: #555;">
+      出席認証機能は、ネイティブアプリ（iOS/Android）版に移行しました。
+    </p>
+    <p>（顔認証、GPS認証、ビーコン認証、ICカード認証は、ネイティブアプリから実行してください）</p>
   </main>
-
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-  
-  <script defer src="https://cdn.jsdelivr.net/npm/face-api.js/dist/face-api.min.js"></script>
-  
-  <script defer src="script.js"></script>
 </body>
-</html>
